name:                hat
version:             0.1.0.0
synopsis:            Host your own Hat game
description:
  Host your own Hat game
homepage:            http://github.com/neongreen/hat
bug-reports:         http://github.com/neongreen/hat/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Game
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-files:
  static/*.css
  static/*.js
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/neongreen/hat.git

executable hat
  main-is:             Main.hs
  other-modules:
    DB
    Utils
    JS
  build-depends:       MonadRandom
                     , Spock
                     , Spock-lucid == 0.2.*
                     , acid-state
                     , base >=4.8 && <5
                     , base-prelude == 1.*
                     , containers
                     , directory
                     , hashable
                     , ilist
                     , lucid >= 2.9.5 && < 3
                     , megaparsec
                     , microlens-platform
                     , mtl
                     , neat-interpolation
                     , optparse-applicative
                     , optparse-simple
                     , path-pieces
                     , random-shuffle
                     , safecopy
                     , scrypt
                     , slave-thread
                     , split
                     , text-all == 0.2.*
                     , time
                     , transformers
                     , vector
                     , wai-middleware-static
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
